# zombenum

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: components.rs  main.rs  survivor.rs  systems.rs  zombie.rs
src/components/: common.rs  living.rs  mod.rs  usable.rs
src/entities/: mod.rs  survivor.rs  zombie.rs
src/entities/weapons/: guns.rs  mod.rs
src/resources/: mod.rs
src/systems/: broadcast.rs  mod.rs  spawn.rs
src/util/: mod.rs  name_generator.rs
