[package]
name = "zombenum-client"
version = "0.1.0"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
edition = "2018"

[dependencies]
zombenum-shared = { path = "../shared" }
macroquad = "0.3.0-alpha.14"
laminar = "0.4"
simplelog = "0.9"
log = "0.4"
anyhow = "1"
glam = { version = "0.12", features = ["serde"] }
legion= "0.3"

serde = "1"
bincode = "1"
