[package]
name = "zombenum-server"
version = "0.1.0"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
edition = "2018"

[dependencies]
zombenum-shared = { path = "../shared" }
laminar = "0.4"
simplelog = "0.9"
log = "0.4"
smol = "1"
anyhow = "1"
legion = "0.3"
serde = "1"
serde_derive = "1"
bincode = "1"
